{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 36,
  "lineage": "6d087702-6f74-3685-396d-0842922efff2",
  "resources": [
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "kubernetes_ingress_class_v1",
      "name": "ingress_class",
      "provider": "module.kubernetes.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "nginx",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "nginx",
                "resource_version": "450",
                "uid": "e839c537-aab1-4b83-8a31-9895898a6b34"
              }
            ],
            "spec": [
              {
                "controller": "k8s.io/nginx-ingress-controller",
                "parameters": []
              }
            ]
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kind_cluster.kind_cluster.default",
            "module.kubernetes.kubernetes_namespace.namespace"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "kubernetes_ingress_v1",
      "name": "ingress",
      "provider": "module.kubernetes.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "ping-pong/ping-pong-ingress",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "ping-pong-ingress",
                "namespace": "ping-pong",
                "resource_version": "2284",
                "uid": "9a20c238-724c-413f-b774-5501d9a2ad1f"
              }
            ],
            "spec": [
              {
                "default_backend": [],
                "ingress_class_name": "nginx",
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "resource": [],
                                "service": [
                                  {
                                    "name": "ping-pong-service",
                                    "port": [
                                      {
                                        "name": "",
                                        "number": 8080
                                      }
                                    ]
                                  }
                                ]
                              }
                            ],
                            "path": "/",
                            "path_type": "ImplementationSpecific"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": []
                  }
                ]
              }
            ],
            "timeouts": null,
            "wait_for_load_balancer": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.kind_cluster.kind_cluster.default",
            "module.kubernetes.kubernetes_ingress_class_v1.ingress_class",
            "module.kubernetes.kubernetes_namespace.namespace",
            "module.kubernetes.kubernetes_service.service"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "namespace",
      "provider": "module.kubernetes.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "ping-pong",
            "metadata": [
              {
                "generation": 0,
                "name": "ping-pong",
                "resource_version": "447",
                "uid": "b24170a9-e3b9-423e-8aeb-231f248a2fdc"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "module.kind_cluster.kind_cluster.default"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "service",
      "provider": "module.kubernetes.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "ping-pong/ping-pong-service",
            "metadata": [
              {
                "generation": 0,
                "name": "ping-pong-service",
                "namespace": "ping-pong",
                "resource_version": "2270",
                "uid": "a0ee82c7-b087-41b2-9291-8d93b9520209"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.30.19.58",
                "cluster_ips": [
                  "10.30.19.58"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 8080,
                    "protocol": "TCP",
                    "target_port": "8080"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "ping-pong"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "module.kind_cluster.kind_cluster.default",
            "module.kubernetes.kubernetes_namespace.namespace"
          ]
        }
      ]
    }
  ]
}